tests/Rules/Structure/Fixtures/invalid/headings_multiple_jumps.html.twig
<h1>Main</h1>
<h3>Jumped once</h3>
<h4>Down one</h4>
<h6>Jumped again</h6>
